replaced link to userscripts.org with greasyfork.org, since userscripts.org is defunct

--- a/NinjaKit.safariextension/options.html
+++ b/NinjaKit.safariextension/options.html
@@ -24,7 +24,7 @@
     <ul id="script_list">
     </ul>
     <button id="add_script">Add new script</button>
-    <p>search from <a href="http://userscripts.org/">userscripts.org</a></p>
+    <p>search from <a href="http://greasyfork.org/">greasyfork.org</a></p>
     <fieldset id="options">
       <h2>beautify options</h2>
       <ul>
