missing close tag

--- a/NinjaKit.safariextension/view_source.html
+++ b/NinjaKit.safariextension/view_source.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Greased Chrome source viewer</title>
 <link href="css/greasebox.css" rel="stylesheet" type="text/css">
+</head>
 <body id="view-source">
 <h1>Greasemonkey Source viewer</h1>
 <div id="content">
