Edited some UI strings

--- a/NinjaKit.safariextension/index.html
+++ b/NinjaKit.safariextension/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Greased Chrome background</title>
+<title>NinjaKit background</title>
 <script src="js/convert2RegExp.js"></script>
 <script src="js/background.js"></script>
 <body>background</body>
