--- a/NinjaKit.safariextension/options.html
+++ b/NinjaKit.safariextension/options.html
@@ -23,7 +23,7 @@
   <div id="left_box">
     <ul id="script_list">
     </ul>
-    <button id="add_script">Add new script</button>
+    <button id="add_script">New script</button>
     <p>Get userscripts from <a href="http://greasyfork.org/">greasyfork.org</a></p>
     <fieldset id="options">
       <h2>Beautify</h2>
@@ -38,14 +38,14 @@
           </select>
         </li>
         <li><input type="checkbox" id="braces-on-own-line" checked="checked"><label for="braces-on-own-line"> Braces on own line</label></li>
-        <li><input type="checkbox" id="preserve-newlines" checked="checked"><label for="preserve-newlines"> Preserve empty lines?</label></li>
-        <li><input type="checkbox" id="detect-packers"><label for="detect-packers"> Detect packers?</label></li>
-        <li><input type="checkbox" id="keep-array-indentation"><label for="keep-array-indentation"> Keep array indentation?</label></li>
+        <li><input type="checkbox" id="preserve-newlines" checked="checked"><label for="preserve-newlines"> Preserve empty lines</label></li>
+        <li><input type="checkbox" id="detect-packers"><label for="detect-packers"> Detect packers</label></li>
+        <li><input type="checkbox" id="keep-array-indentation"><label for="keep-array-indentation"> Keep array indentation</label></li>
 	</ul>
 	<h2>Display</h2>
 	<ul class="option_list">
         <li> Font size: <span id="currentFontSize">12</span><br> 8<input type="range" id="fontSize" value="12" step="1" min="8" max="40">40</li>
-        <li><button id="getFont">get fonts</button></li>
+        <li><button id="getFont">Get fonts</button></li>
       </ul>
     </fieldset>
   </div>
