--- a/NinjaKit.safariextension/popup.html
+++ b/NinjaKit.safariextension/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Chrome Stylist</title>
+<title>NinjaKit Stylist</title>
 <link href="css/popup.css" rel="stylesheet" type="text/css">
 <body>
 <ul id="scripts"><li>Scripts</li></ul>
