--- a/NinjaKit.safariextension/grease.html
+++ b/NinjaKit.safariextension/grease.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Greased Chrome Dialog</title>
+<title>NinjaKit Dialog</title>
 <link href="css/greasebox.css" rel="stylesheet" type="text/css">
 <body>
-<h1>Greasemonkey Installer</h1>
+<h1>NinjaKit Installer</h1>
 <div id="content">
-<p>This is Greasemonkey Script.</p>
+<p>This is a userscript.</p>
 <section>
-<h2 id="script-name">loading...</h2>
+<h2 id="script-name">Loading...</h2>
 <p id="description"></p>
 <dl id="includes">
 <dt>Includes:
@@ -18,12 +18,12 @@
 <dt>Excludes:
 </dl>
 </section>
-<p id="install-note">You should only install scripts from sources that you trust</p>
+<p id="install-note">Only install scripts from sources you trust!</p>
 <script>if (/^ja/.test(navigator.language))document.querySelector('#install-note').textContent = '信頼できるソースからのみ、スクリプトをインストールすべきです。';</script>
 <fieldset>
   <button id="install" disabled>Install</button>
-  <button id="view_source">view source</button>
-  <button id="cancel">cancel</button>
+  <button id="view_source">View source</button>
+  <button id="cancel">Cancel</button>
 </fieldset>
 </div>
 <script src="js/grease_dialog.js"></script>
