--- a/NinjaKit.safariextension/options.html
+++ b/NinjaKit.safariextension/options.html
@@ -60,7 +60,7 @@
     <dt>Version:<dt>
     <dd>ver <span id="ExtensionVersion"></span></dd>
     <dt>Author:<dt>
-    <dd><a href="http://ss-o.net/" target="_blank">os0x</a></dd>
+    <dd><a href="https://github.com/techietrash/NinjaKit/" target="_blank">os0x (mod by techietrash)</a></dd>
     <dt>License:<dt>
     <dd><a href="http://os0x.mit-license.org/" target="_blank">The MIT license</a></dd>
   </dl>
